--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/postcss": "^4.1.5",
+    "@types/matter-js": "^0.19.8",
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
+    "matter-js": "^0.20.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
