--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss": "^4.1.5",
     "@types/matter-js": "^0.19.8",
     "@types/three": "^0.176.0",
+    "framer-motion": "^12.9.4",
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
     "matter-js": "^0.20.0",
