--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/postcss": "^4.1.5",
     "@types/matter-js": "^0.19.8",
+    "@types/react-transition-group": "^4.4.12",
     "@types/three": "^0.176.0",
     "framer-motion": "^12.9.4",
     "gsap": "^3.13.0",
@@ -23,6 +24,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "^4.1.5",
     "three": "^0.176.0"
   },
